[gd_scene load_steps=17 format=2]

[ext_resource path="res://Sprites/Characters/character_base.png" type="Texture" id=1]
[ext_resource path="res://Scripts/CharacterBase/character_base.gd" type="Script" id=2]
[ext_resource path="res://Scripts/CharacterBase/state_manager.gd" type="Script" id=3]
[ext_resource path="res://Scripts/CharacterBase/States/land.gd" type="Script" id=4]
[ext_resource path="res://Scripts/CharacterBase/States/idle.gd" type="Script" id=5]
[ext_resource path="res://Scripts/CharacterBase/States/air_jump.gd" type="Script" id=6]
[ext_resource path="res://Scripts/CharacterBase/States/run.gd" type="Script" id=7]
[ext_resource path="res://Scripts/CharacterBase/States/jumpsquat.gd" type="Script" id=8]
[ext_resource path="res://Scripts/CharacterBase/States/fall.gd" type="Script" id=9]
[ext_resource path="res://Scripts/CharacterBase/States/freefall.gd" type="Script" id=10]
[ext_resource path="res://Scripts/CharacterBase/States/jump.gd" type="Script" id=11]
[ext_resource path="res://Scenes/Hurtbox.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/Hitbox.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scripts/CharacterBase/States/hitstun.gd" type="Script" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 8 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 4.0
height = 8.0

[node name="CharacterBase" type="KinematicBody2D"]
collision_layer = 2
collision/safe_margin = 0.03
script = ExtResource( 2 )
gravity = 750.0
fall_speed = 250.0
fastfall_speed = 350.0
fastfall_gravity = 4.0
fullhop_height = 275.0
shorthop_height = 200.0
air_jump_height = 235.0
run_speed = 115.0
ground_acceleration = 2000.0
ground_friction = 10.0
air_friction = 1.25
air_acceleration = 600.0
air_speed = 90.0
air_jumps = 1
jumpsquat_frames = 4

[node name="ECB" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 5
vframes = 4

[node name="Hitbox" parent="." instance=ExtResource( 13 )]

[node name="Bounds" parent="Hitbox" index="0"]
disabled = true

[node name="Hurtbox" parent="." instance=ExtResource( 12 )]
hitbox_node = NodePath("../Hitbox")

[node name="Bounds" parent="Hurtbox" index="0"]
shape = SubResource( 2 )

[node name="StateManager" type="Node" parent="."]
script = ExtResource( 3 )
starting_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateManager"]
script = ExtResource( 5 )
animation_name = "Idle"

[node name="Run" type="Node" parent="StateManager"]
script = ExtResource( 7 )
animation_name = "Run"

[node name="Jump" type="Node" parent="StateManager"]
script = ExtResource( 11 )
animation_name = "Jump"

[node name="AirJump" type="Node" parent="StateManager"]
script = ExtResource( 6 )
animation_name = "AirJump"

[node name="Jumpsquat" type="Node" parent="StateManager"]
script = ExtResource( 8 )
animation_name = "Jumpsquat"

[node name="Fall" type="Node" parent="StateManager"]
script = ExtResource( 9 )
animation_name = "Fall"

[node name="Freefall" type="Node" parent="StateManager"]
script = ExtResource( 10 )
animation_name = "Freefall"

[node name="Land" type="Node" parent="StateManager"]
script = ExtResource( 4 )
animation_name = "Land"

[node name="Hitstun" type="Node" parent="StateManager"]
script = ExtResource( 14 )
animation_name = "Hitstun"

[connection signal="area_entered" from="Hurtbox" to="Hurtbox" method="_on_Hurtbox_area_entered"]
[connection signal="hit_info" from="Hurtbox" to="." method="_on_Hurtbox_hit_info"]
[connection signal="hit_info" from="Hurtbox" to="StateManager/Hitstun" method="_on_Hurtbox_hit_info"]

[editable path="Hitbox"]
[editable path="Hurtbox"]
